Fix issues in FhirEncodersTest and TestData